--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "express": "^4.18.3",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-azure-ad": "^4.3.5"
+  },
+  "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0"
   }
 }
