--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
-    "passport-azure-ad": "^4.3.5"
+    "passport-azure-ad": "^4.3.5",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0"
